<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="mwWeather"
            type="com.ocp.casesolution.model.ConsolidatedWeather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cd"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@{title}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/middle"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd" />

        <TextView
            android:id="@+id/wind_val"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/wind_format_second_fragment, mwWeather.windDirectionCompass, (int)mwWeather.windSpeed)}"
            app:layout_constraintStart_toStartOf="@id/wind"
            app:layout_constraintTop_toBottomOf="@id/wind"
            tools:text="s 9 mph" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="@id/middle"
            app:layout_constraintTop_toBottomOf="@id/cd" />

        <TextView
            android:id="@+id/humidity_val"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/humidity_format_second_fragment, mwWeather.humidity)}"
            app:layout_constraintStart_toStartOf="@id/humidity"
            app:layout_constraintTop_toBottomOf="@id/wind"
            tools:text="71%" />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/visibility"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind_val" />

        <TextView
            android:id="@+id/visibility_val"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/visibility_format_second_fragment, mwWeather.visibility)}"
            app:layout_constraintStart_toStartOf="@id/visibility"
            app:layout_constraintTop_toBottomOf="@id/visibility"
            tools:text="13.5 miles" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/pressure"
            app:layout_constraintStart_toStartOf="@id/middle"
            app:layout_constraintTop_toBottomOf="@id/wind_val" />

        <TextView
            android:id="@+id/pressure_val"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/pressure_format_second_fragment, mwWeather.airPressure)}"
            app:layout_constraintStart_toStartOf="@id/pressure"
            app:layout_constraintTop_toBottomOf="@id/pressure"
            tools:text="1080mb" />

        <TextView
            android:id="@+id/confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/confidence"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visibility_val" />

        <TextView
            android:id="@+id/confidence_val"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/confidence_format_second_fragment, mwWeather.predictability)}"
            app:layout_constraintStart_toStartOf="@id/confidence"
            app:layout_constraintTop_toBottomOf="@id/confidence"
            tools:text="1080mb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confidence_val" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
